# MAESTER

./: .gitignore  LICENSE  README.md  pyproject.toml
MAESTER/: dataset.py  infer_engine.py  model.py  pretrain_engine.py  train.py  utils.py
MAESTER/configs/: default.yaml
MAESTER/scripts/: slurm_run.sh
examples/: inference_demo.ipynb
