[tool.poetry]
name = "maester"
version = "0.1.0"
description = "Self-supervised method for subcellular structure segmentation in vEM"
authors = ["Kuan-Pang <kuan.pang@mail.utoronto.ca>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
timm = "^0.9.2"
monai = "^1.2.0"
Pillow = "^9.5.0"
ipython = "^8.14.0"
numpy = "^1.24.3"
pandas = "^2.0.2"
ipykernel = "^6.23.2"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
